# cruckig

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: ci-deb-docker-entry.sh  ci-deb-setup.sh
.github/workflows/: build-deb.yml
cmake/: cruckig-config.cmake.in
examples/: 01_position.c
include/cruckig/: block.h  brake.h  calculator.h  cruckig.h  cruckig_config.h  input_parameter.h  output_parameter.h  position.h  profile.h  result.h  roots.h  trajectory.h  utils.h  velocity.h
src/: block.c  brake.c  calculator.c  cruckig.c  input_parameter.c  output_parameter.c  position_first_step1.c  position_first_step2.c  position_second_step1.c  position_second_step2.c  position_third_step1.c  position_third_step2.c  profile.c  roots.c  trajectory.c  velocity_second_step1.c  velocity_second_step2.c  velocity_third_step1.c  velocity_third_step2.c
test/: benchmark.c  test_comparison.cpp  test_main.c  test_random.c  test_readme_example.c
wrapper/python/: pyproject.toml
wrapper/python/cruckig/: __init__.py  _binding.py
wrapper/python/examples/: 01_position.py  05_velocity.py  README.md  test_readme_python.py
wrapper/rust/: Cargo.toml  build.rs
wrapper/rust/examples/: 01_position.rs  05_velocity.rs
wrapper/rust/src/: lib.rs
wrapper/rust/tests/: readme_example.rs
